[package]
name = "tari_base_node_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
minotari_app_grpc = { workspace = true }
minotari_node_grpc_client = { workspace = true }
tari_common_types = { workspace = true }
tari_core = { workspace = true, default-features = false, features = [
  "transactions",
] }
tari_utilities = { workspace = true }

tari_dan_common_types = { workspace = true }

async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true, default-features = true }
thiserror = { workspace = true }
tonic = { workspace = true }
ts-rs = { workspace = true, optional = true }

[features]
ts = ["ts-rs"]
