[package]
name = "tari_indexer_client"
description = "Tari indexer client library"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common_types = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_engine_types = { workspace = true }
tari_transaction = { workspace = true }
tari_dan_storage = { workspace = true }

anyhow = "1.0.65"
reqwest = { version = "0.11.11", features = ["json"] }
multiaddr = "0.14"
serde = "1.0"
serde_json = "1.0"
serde_with = "2.3"
thiserror = "1.0"
