[package]
name = "tari_validator_node_client"
description = "Tari validator node client library"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_dan_common_types = { workspace = true }
tari_engine_types = { workspace = true }
tari_common_types = { workspace = true }
tari_comms_logging = { workspace = true }
tari_transaction = { workspace = true }
tari_dan_storage = { workspace = true }

reqwest = { workspace = true, features = ["json"] }
multiaddr = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
