[package]
name = "tari_wallet_daemon_client"
description = "Tari wallet daemon client library"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_dan_common_types = { path = "../../dan_layer/common_types" }
tari_engine_types = { path = "../../dan_layer/engine_types" }
tari_common_types = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_transaction = { path = "../../dan_layer/transaction" }
tari_dan_wallet_sdk = { path = "../../dan_layer/wallet/sdk" }
# TODO: Ideally we should not have to include the WASM template lib, we should perhaps extract the address types into a separate crate (e.g. template_types)
tari_template_lib = { path = "../../dan_layer/template_lib" }

chrono = "*"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.38"
