[package]
name = "tari_wallet_daemon_client"
description = "Tari wallet daemon client library"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_dan_common_types = { workspace = true }
tari_engine_types = { workspace = true }
tari_common_types = { workspace = true }
tari_transaction = { workspace = true }
tari_dan_wallet_sdk = { workspace = true }
# TODO: Ideally we should not have to include the WASM template lib, we should perhaps extract the address types into a separate crate (e.g. template_types)
tari_template_lib = { workspace = true }

chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
