[package]
name = "tari_comms_logging"
version = "0.0.7"
edition = "2021"
authors = ["The Tari Development Community"]
description = "Debugging tool that logs all network messages in a SQLite database"
repository = "https://github.com/tari-project/tari-dan"
license = "BSD-3-Clause"

[dependencies]
diesel = { version = "2", default-features = false, features = ["sqlite", "chrono"] }
diesel_migrations = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4.8", features = ["std"] }
chrono = { version = "0.4.23", features = ["serde"] }
