[package]
name = "tari_comms_logging"
description = "Debugging tool that logs all network messages in a SQLite database"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
diesel = { version = "2", default-features = false, features = ["sqlite", "chrono"] }
diesel_migrations = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4.8", features = ["std"] }
chrono = { version = "0.4.23", features = ["serde"] }
