[package]
name = "tari_comms_logging"
description = "Debugging tool that logs all network messages in a SQLite database"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
diesel = { workspace = true, default-features = false, features = ["sqlite", "chrono"] }
diesel_migrations = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true }
log = { workspace = true, features = ["std"] }
chrono = { workspace = true, features = ["serde"] }
