[package]
name = "tari_dan_common_types"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common_types = { workspace = true }
tari_crypto = { workspace = true, features = ["borsh"] }
tari_engine_types = { workspace = true }
tari_bor = { workspace = true }
tari_mmr = { workspace = true }

blake2 = "0.10.6"
newtype-ops = "0.1.4"
rand = "0.8"
prost = "0.9"
prost-types = "0.9"
serde = "1.0"
ruint = "1.8.0"

[build-dependencies]
tari_common = { workspace = true, features = ["build"] }

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types"] # false positive, used in OUT_DIR structs
