[package]
name = "tari_comms_rpc_state_sync"
version = "0.50.0-pre.0"
edition = "2021"
authors = ["The Tari Development Community"]
description = "Tari template runtime engine"
repository = "https://github.com/tari-project/tari-dan"
license = "BSD-3-Clause"

[dependencies]
tari_epoch_manager = { path = "../epoch_manager" }
tari_dan_storage = { path = "../storage" }
tari_validator_node_rpc = { path = "../validator_node_rpc" }
tari_consensus = { path = "../consensus" }
tari_dan_common_types = { path = "../common_types" }
tari_transaction = { path = "../transaction" }

tari_rpc_framework = { path = "../../networking/rpc_framework" }

anyhow = "1.0.75"
async-trait = "0.1.73"
futures = "0.3.28"
log = "0.4.20"
thiserror = "1.0.48"
