[package]
name = "tari_comms_rpc_state_sync"
description = "Tari template runtime engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_epoch_manager = { path = "../epoch_manager" }
tari_dan_storage = { path = "../storage" }
tari_validator_node_rpc = { path = "../validator_node_rpc" }
tari_consensus = { path = "../consensus" }
tari_dan_common_types = { path = "../common_types" }
tari_transaction = { path = "../transaction" }

tari_comms = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }

anyhow = "1.0.75"
async-trait = "0.1.73"
futures = "0.3.28"
log = "0.4.20"
thiserror = "1.0.48"
