[package]
name = "tari_comms_rpc_state_sync"
description = "Tari template runtime engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_epoch_manager = { workspace = true }
tari_dan_storage = { workspace = true }
tari_validator_node_rpc = { workspace = true }
tari_consensus = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_transaction = { workspace = true }

tari_comms = { workspace = true }

anyhow = "1.0.75"
async-trait = "0.1.73"
futures = "0.3.28"
log = "0.4.20"
thiserror = "1.0.48"
