[package]
name = "tari_consensus"
description = "Tari template runtime engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_dan_common_types = { path = "../common_types" }
tari_dan_storage = { path = "../storage" }
tari_transaction = { path = "../transaction" }
tari_epoch_manager = { path = "../epoch_manager" }

# Used for PublicKey and Signature
tari_common_types = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_mmr = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_shutdown = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }

anyhow = "1.0"
async-trait = "0.1.68"
log = "0.4"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["sync"] }
