[package]
name = "tari_consensus"
description = "Tari template runtime engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_dan_common_types = { workspace = true }
tari_dan_storage = { workspace = true }
tari_transaction = { workspace = true }
tari_epoch_manager = { workspace = true }

# Used for PublicKey and Signature
tari_common_types = { workspace = true }
tari_mmr = { workspace = true }
tari_shutdown = { workspace = true }

anyhow = "1.0"
async-trait = "0.1.68"
log = "0.4"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["sync"] }
