[package]
name = "tari_consensus"
description = "Tari template runtime engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_dan_common_types = { workspace = true }
tari_dan_storage = { workspace = true }
tari_transaction = { workspace = true }
tari_epoch_manager = { workspace = true }

# Used for PublicKey and Signature
tari_common_types = { workspace = true }
tari_mmr = { workspace = true }
tari_shutdown = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true, default-features = true }
thiserror = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["sync"] }
