[package]
name = "consensus_tests"
version = "0.50.0-pre.0"
edition = "2021"
authors = ["The Tari Development Community"]
description = "Tari template runtime engine"
repository = "https://github.com/tari-project/tari-dan"
license = "BSD-3-Clause"

[dependencies]

[dev-dependencies]
tari_dan_common_types = { path = "../common_types" }
tari_consensus = { path = "../consensus" }
tari_dan_storage = { path = "../storage" }
tari_state_store_sqlite = { path = "../state_store_sqlite" }
tari_transaction = { path = "../transaction" }
tari_engine_types = { path = "../engine_types" }
tari_epoch_manager = { path = "../epoch_manager" }

tari_common_types = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_mmr = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_shutdown = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_crypto = "0.18"

anyhow = "1.0"
async-trait = "0.1.68"
log = "0.4"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["sync", "rt-multi-thread"] }
rand = "0.8"
futures = "0.3"
fern = "0.6.2"
humantime = "2.1.0"
itertools = "0.11.0"
