[package]
name = "consensus_tests"
description = "Tari template runtime engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
tari_dan_common_types = { workspace = true }
tari_consensus = { workspace = true }
tari_dan_storage = { workspace = true }
tari_state_store_sqlite = { workspace = true }
tari_transaction = { workspace = true }
tari_engine_types = { workspace = true }
tari_epoch_manager = { workspace = true }

tari_common_types = { workspace = true }
tari_mmr = { workspace = true }
tari_shutdown = { workspace = true }
tari_crypto = { workspace = true }

anyhow = "1.0"
async-trait = "0.1.68"
log = "0.4"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = [
  "sync",
  "rt-multi-thread",
] }
rand = "0.8"
futures = "0.3"
fern = "0.6.2"
humantime = "2.1.0"
itertools = "0.11.0"
