[package]
name = "consensus_tests"
description = "Tari template runtime engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
tari_bor = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_consensus = { workspace = true }
tari_dan_storage = { workspace = true }
tari_state_store_sqlite = { workspace = true }
tari_transaction = { workspace = true }
tari_engine_types = { workspace = true }
tari_epoch_manager = { workspace = true }

tari_common_types = { workspace = true }
tari_mmr = { workspace = true }
tari_shutdown = { workspace = true }
tari_crypto = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true, default-features = true }
thiserror = { workspace = true }
tokio = { workspace = true, default-features = false, features = [
  "sync",
  "rt-multi-thread",
] }
rand = { workspace = true }
futures = { workspace = true }
fern = { workspace = true }
humantime = { workspace = true }
itertools = { workspace = true }
