[package]
name = "tari_dan_core"
version = "0.35.1"
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_common = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_common" }
tari_comms = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_comms" }
tari_comms_dht = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_comms_dht" }
tari_comms_rpc_macros = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_comms_rpc_macros" }
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", tag = "v0.16.5" }
tari_mmr = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_mmr" }
tari_p2p = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_p2p" }
tari_service_framework = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_service_framework" }
tari_shutdown = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_shutdown" }
tari_storage = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_storage" }
tari_core = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_core" }
tari_dan_common_types = { path = "../common_types" }
tari_common_types = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_common_types" }
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git", tag = "v0.4.10" }
tari_dan_engine = { path = "../engine" }
tari_template_lib = { path = "../template_lib" }
tari_dan_storage = { path = "../storage" }
tari_engine_types = { path = "../engine_types" }
tari_bor = { path = "../tari_bor" }

anyhow = "1.0.53"
async-trait = "0.1.50"
blake2 = "0.9.2"
borsh = "0.9.3"
chrono = { version = "0.4.19", default-features = false }
clap = "3.1.8"
digest = "0.9.0"
futures = { version = "^0.3.1" }
lmdb-zero = "0.4.4"
log = { version = "0.4.8", features = ["std"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
prost = "0.9"
prost-types = "0.9"
rand = "0.8.4"
serde = "1.0.126"
thiserror = "^1.0.20"
tokio = { version = "1.10", features = ["macros", "time"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
tonic = "0.6.2"
lazy_static = "1.4.0"

serde_json = "1.0.64"

[dev-dependencies]
tari_test_utils = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_test_utils" }

[build-dependencies]
tari_common = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_common", features = ["build"] }
