[package]
name = "tari_dan_core"
version = "0.35.1"
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_comms = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_comms" }
tari_comms_dht = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_comms_dht" }
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", tag = "v0.16.6" }
tari_mmr = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_mmr" }
tari_shutdown = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_shutdown" }
tari_storage = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_storage" }
tari_core = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_core" }
tari_dan_common_types = { path = "../common_types" }
tari_common_types = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_common_types" }
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git", tag = "v0.4.10" }
tari_dan_engine = { path = "../engine" }
tari_dan_storage = { path = "../storage" }
tari_engine_types = { path = "../engine_types" }
tari_transaction = { path = "../transaction" }

anyhow = "1.0.53"
async-trait = "0.1.50"
blake2 = "0.9.2"
chrono = { version = "0.4.19", default-features = false }
digest = "0.9.0"
futures = { version = "^0.3.1" }
lmdb-zero = "0.4.4"
log = { version = "0.4.8", features = ["std"] }
prost = "0.9"
rand = "0.8.4"
serde = "1.0.126"
thiserror = "^1.0.20"
tokio = { version = "1.10", features = ["macros", "time"] }
tonic = "0.6.2"

[dev-dependencies]
tari_test_utils = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_test_utils" }

[build-dependencies]
tari_common = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_common", features = ["build"] }
