[package]
name = "tari_dan_core"
version = "0.50.0-pre.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
tari_comms = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_comms" }
tari_crypto = { version = "0.17" }
tari_mmr = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_mmr" }
tari_shutdown = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_shutdown" }
tari_core = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_core" }
tari_dan_common_types = { path = "../common_types" }
tari_common_types = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_common_types" }
tari_epoch_manager = { path = "../epoch_manager", features = ["base_layer"] }
tari_utilities = "0.4.10"
tari_dan_engine = { path = "../engine" }
tari_dan_storage = { path = "../storage" }
tari_engine_types = { path = "../engine_types" }
tari_transaction = { path = "../transaction" }
tari_base_node_client = { path = "../../clients/base_node_client" }

anyhow = "1.0.53"
async-trait = "0.1.50"
blake2 = "0.9.2"
digest = "0.9.0"
futures = { version = "^0.3.1" }
log = { version = "0.4.8", features = ["std"] }
rand = "0.8.4"
serde = "1.0"
thiserror = "^1.0.20"
tokio = { version = "1.10", features = ["macros", "time"] }

[dev-dependencies]
tari_test_utils = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_test_utils" }

[build-dependencies]
tari_common = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_common", features = ["build"] }
