[package]
name = "tari_dan_engine"
description = "Tari template runtime engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_bor = { workspace = true, default-features = true }
tari_common_types = { workspace = true }
tari_crypto = { workspace = true, features = ["borsh"] }
tari_dan_common_types = { workspace = true }
tari_engine_types = { workspace = true }
tari_template_abi = { workspace = true, features = ["std"] }
tari_template_lib = { workspace = true }
tari_utilities = { workspace = true }
tari_transaction = { workspace = true }

anyhow = "1.0.53"
blake2 = "0.10.6"
cargo_toml = "0.11.5"
d3ne = { git = "https://github.com/stringhandler/d3ne-rs.git", tag = "v0.8.0-pre.3" }
log = { version = "0.4.8", features = ["std"] }
rand = "0.8"
indexmap = "2.1.0"
serde = "1.0"
serde_json = "1"
thiserror = "^1.0.20"
tempfile = "3.3.0"
wasmer = "2.3.0"
wasmer-middlewares = "2.3.0"

[dev-dependencies]
env_logger = "0.10.0"
tari_template_test_tooling = { workspace = true }
tari_transaction_manifest = { workspace = true }
tari_transaction = { workspace = true }
